--- a/client/src/containers/Auth/Login/login.css
+++ b/client/src/containers/Auth/Login/login.css
@@ -1,9 +1,7 @@
 .login_body{
     height:100vh;
     background-image: linear-gradient(to bottom,rgba(2, 14, 65, 0.685),rgba(5, 30, 143, 0.664)),url("../../../Images/pizza.jpg");
-
-    background-repeat: no-repeat;
-    background-size:100%;
+    background-size:cover;
 }
 
 @import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
@@ -38,7 +36,7 @@
   background-color: rgba(255, 255, 255, 0.397);
   border-radius: 5px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-  width: 380px;
+  width: 28rem;
   top:30%;
   left:35%;
   position: absolute;
@@ -142,17 +140,32 @@ h2 {
   width: 100%;
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 800px) {
   .container {
-    width: 320px;
-    margin: 30% auto;
+    width: 20rem;
+    margin:  auto;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .container {
+    width: 15rem;
+    margin: auto;
   }
 }
 
 @media only screen and (max-width: 400px) {
+  .container {
+    width: 13rem;
+    margin: auto;
+  }
+}
+
+
+/* @media only screen and (max-width: 800px) {
   .form_control {
     margin-bottom: 5px;
     padding-bottom: 10px;
     position: relative;
   }
-}
+} */
