--- a/client/src/containers/Auth/Login/login.css
+++ b/client/src/containers/Auth/Login/login.css
@@ -37,8 +37,9 @@
   border-radius: 5px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
   width: 28rem;
-  top:30%;
-  left:35%;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
   position: absolute;
   padding:20px 20px 40px 20px;
   /* overflow: scroll; */
@@ -149,14 +150,14 @@ h2 {
 
 @media only screen and (max-width: 500px) {
   .container {
-    width: 15rem;
+    width: 20rem;
     margin: auto;
   }
 }
 
 @media only screen and (max-width: 400px) {
   .container {
-    width: 13rem;
+    width: 15rem;
     margin: auto;
   }
 }
