--- a/client/src/containers/Cart/Cart.css
+++ b/client/src/containers/Cart/Cart.css
@@ -2,10 +2,11 @@
 
 .container{
     padding:8% 2%;
-    background-image: linear-gradient(to bottom,rgba(2, 14, 65, 0.685),rgba(5, 30, 143, 0.664)),url("../../Images/vita-marija-murenaite-eSeo6IzOV00-unsplash.jpg");
+    /* background-image: linear-gradient(to bottom,rgba(2, 14, 65, 0.685),rgba(5, 30, 143, 0.664)),url("../../Images/vita-marija-murenaite-eSeo6IzOV00-unsplash.jpg"); */
     margin:0;
-    background-size: 100%;
-    /* height:100vh; */
+    /* background-size: cover; */
+    height:100vh;
+    /* background-repeat: repeat; */
     
 }
 
@@ -14,7 +15,7 @@
 .box{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    overflow-y:scroll;
+    /* overflow-y:scroll; */
     grid-gap:20%;
 }
 
@@ -32,7 +33,7 @@
     text-decoration: none;
     position:relative;
     padding:10px;
-    left:90%;
+    left:80%;
     bottom:-1%;
     width:20%;
 }
@@ -43,30 +44,45 @@
 }
 
 .sum_total{
-    /* position:absolute;
-    left:1rem;
-    top:6rem; */
+    
     padding:1rem;
-    background-color: white;
-    color:rgb(2, 14, 65);
-width:20%;
+    color: white;
+    background-color:rgb(2, 14, 65);
+    width:20%;
     margin-bottom:3rem;
     
 }
 
 .price_total{
-    /* position:absolute;
-    right:1rem;
-    top:6rem; */
     padding:1rem;
-width:20%;
-    background-color: white;
-    color:rgb(2, 14, 65);
+    width:20%;
+    color: white;
+    background-color:rgb(2, 14, 65);
     margin-bottom:3rem;
 
 
 }
 
+@media  screen and (max-width:1300px){
+
+    .sum_total{
+       
+        padding:2rem;
+        width:40%;
+        margin:3rem 0 3rem 0;
+        
+    }
+    
+    .price_total{
+       
+        padding:2rem;
+        width:40%;
+        margin :3rem  0 3rem 0;
+       
+    
+    
+    }
+}
 
 @media  screen and (max-width:1150px){
     .box{
@@ -76,6 +92,14 @@ width:20%;
         grid-column-gap:3%;
         
     }
+
+    .delete_btn{
+        left:90%;
+        bottom:-1%;
+        width:20%;
+    }
+
+
 }
 
 @media  screen and (max-width:1190px){
@@ -99,6 +123,8 @@ width:20%;
 }
 
 @media  screen and (max-width:600px){
+
+    
     .sum_total{
        
         padding:1rem;
@@ -117,16 +143,22 @@ width:20%;
     }
 }
 
-@media  screen and (max-width:400px){
+@media  screen and (max-width:500px){
 
     .sum_total{
-        width:45%;
+        width:48%;
         margin:4rem 0 3rem 0;  
     }
     
     .price_total{  
-        width:45%;
+        width:48%;
         margin :4rem  0 3rem 0;
+    }
+
+    .delete_btn{
+        left:80%;
+        bottom:-1%;
+        width:20%;
     }
 
 
